# lxt_pdk_gf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  die_assembled_CLchip_frame_S10000_5000_EZW50_CNone_CCL6_77fda9c1.gds  install_tech.py  mmi_test.gds  models.py  pyproject.toml  sync_changelog.py
.github/: CODEOWNERS  release-drafter.yml  release_drafter.yml  write_cells_docs.py  write_cells_lnoi400.py  write_cells_ltoi300.py  write_components_plot.py
.github/workflows/: pages.yml  test_code.yml
_utils/: bends.py  cell_info.py  cells.py  chip_floorplan.py  cross_section.py  directional_couplers.py  edge_couplers.py  grating_couplers.py  gsg_rf.py  models.py  mzm.py  mzm_v2.py  optical_resonators.py  spline.py  thermal_phase_shifters.py  thermal_phase_shifters_gsg_pads.py
docs/: _config.yml  _toc.yml  api.rst  cells.rst  models.rst
docs/notebooks/: circuit_layout.ipynb  circuit_layout_lnoi400.ipynb  circuit_layout_ltoi300.ipynb  circuit_layout_ltoi300.py  die_assembled_CLchip_fr_e8f9967c.gds  die_assembled_CLchip_frame_Cring_pass_circuit_CRring_wi_7e23603b.gds  die_assembled_CLchip_frame_S10000_5000_EZW50_CNone_CCL6_77fda9c1.gds  models.ipynb
lnoi400/: __init__.py  cells.py  config.py  layers.py  layers.yaml  models.py  sample_mzm_chip.pic.yml  sample_mzm_chip.scm.yml  spline.py  tech.py
lnoi400/_builders/: grating_couplers.py
lnoi400/data/: directional_coupler_balanced.json  edge_coupler_double_linear_taper.json  mmi_1x2_optimized_1550.json  mmi_2x2_optimized_1550.json  ubend_racetrack.json
lnoi400/examples/: circuit_layout_with_edge_couplers.ipynb  circuit_simulation.ipynb  die_assembled_CLchip_fr_21bee887.gds  die_assembled_CLchip_fr_5ce0ff83.gds  die_assembled_CLchip_fr_69fea73f.gds  test_output_bug.py
lnoi400/klayout/: layers.lyp  lnoi.lyp  lnoi400.lyp  tech.lyt
lnoi400/ports/: double_linear_inverse_taper.json  mzm_unbalanced.json
lnoi400/samples/: sample_routing_bundle.py  sample_routing_single.py
ltoi300/: __init__.py  cells.py  config.py  layers.yaml  models.py  tech.py
ltoi300/_builders/: directional_couplers.py  edge_couplers.py  mmis.py  mzms.py  mzms_v2.py  phase_modulators.py  straights.py
ltoi300/_impl/: bends.py  mzm.py  straight.py  thermal_phase_shifters_gsg_pads.py
ltoi300/data/: mmi1x2_cband.json  mmi1x2_oband.json  mmi2x2_cband.json  mmi2x2_oband.json  mmi_1x2_cband.json  mmi_1x2_oband.json  mmi_2x2_cband.json  mmi_2x2_oband.json
ltoi300/klayout/: ltoi300.lyp
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  install_tech.py  pyproject.toml
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/.github/: release-drafter.yml
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/.github/workflows/: pages.yml  test_code.yml
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/docs/: _config.yml  _toc.yml  api.rst
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/docs/notebooks/: circuit_layout.ipynb  models.ipynb
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/lnoi400/: __init__.py  cells.py  config.py  lnoi400.lyp  rings.py  sample_hello_world.py  spline.py  tech.py
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/lnoi400/models/: __init__.py  models.py  ring_single.py  waveguides.py
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/tests/: test_components.py
lxt_pdk_gf--sample-projects/luxtelligence--public--pdk/tests/test_components/: test_settings_S_bend_vert_.yml  test_settings_U_bend_racetrack_.yml  test_settings_bend_S_spline_.yml  test_settings_bend_S_spline_varying_width_.yml  test_settings_chip_frame_.yml  test_settings_double_linear_inverse_taper_.yml  test_settings_eo_phase_shifter_.yml  test_settings_mmi2x2optimized1550_.yml  test_settings_mzm_unbalanced_.yml  test_settings_mzm_unbalanced_high_speed_.yml  test_settings_straight_rwg1000_.yml
tests/: conftest.py  test_components.py
tests/gds_ref/: CPW_pad_linear.gds  L_turn_bend.gds  S_bend_vert.gds  U_bend_racetrack.gds  bend_S_spline.gds  bend_S_spline_varying_width.gds  chip_frame.gds  directional_coupler_balanced.gds  double_linear_inverse_taper.gds  eo_phase_shifter.gds  eo_phase_shifter_high_speed.gds  heater_resistor.gds  heater_straight_single.gds  mmi1x2_optimized1550.gds  mmi2x2optimized1550.gds  mzm_unbalanced.gds  mzm_unbalanced_high_speed.gds  straight_rwg1000.gds  straight_rwg3000.gds  trail_cpw.gds  uni_cpw_straight.gds
tests/ref/: S_bend_vert.gds  mzm_unbalanced.gds
tests/test_components/: test_models_with_wavelength_sweep_lnoi400_U_bend_racetrack_.npz  test_models_with_wavelength_sweep_lnoi400_directional_coupler_balanced_.npz  test_models_with_wavelength_sweep_lnoi400_double_linear_inverse_taper_.npz  test_models_with_wavelength_sweep_lnoi400_eo_phase_shifter_.npz  test_models_with_wavelength_sweep_lnoi400_mmi1x2_optimized1550_.npz  test_models_with_wavelength_sweep_lnoi400_mmi2x2_optimized1550_.npz  test_models_with_wavelength_sweep_lnoi400_mzm_unbalanced_.npz  test_models_with_wavelength_sweep_lnoi400_straight_rwg1000_.npz  test_models_with_wavelength_sweep_lnoi400_straight_swg250_.npz  test_models_with_wavelength_sweep_ltoi300_eo_phase_shifter_cband_.npz  test_models_with_wavelength_sweep_ltoi300_eo_phase_shifter_oband_.npz  test_models_with_wavelength_sweep_ltoi300_mmi1x2_cband_.npz  test_models_with_wavelength_sweep_ltoi300_mmi1x2_oband_.npz  test_models_with_wavelength_sweep_ltoi300_mmi2x2_cband_.npz  test_models_with_wavelength_sweep_ltoi300_mmi2x2_oband_.npz  test_models_with_wavelength_sweep_ltoi300_straight_rwg2500_oband_.npz  test_models_with_wavelength_sweep_ltoi300_straight_rwg700_oband_.npz  test_models_with_wavelength_sweep_ltoi300_straight_rwg900_cband_.npz  test_models_with_wavelength_sweep_ltoi300_terminated_mzm_1x2mmi_cband_.npz  test_models_with_wavelength_sweep_ltoi300_terminated_mzm_1x2mmi_oband_.npz  test_models_with_wavelength_sweep_ltoi300_terminated_mzm_2x2mmi_cband_.npz  test_models_with_wavelength_sweep_ltoi300_terminated_mzm_2x2mmi_oband_.npz  (+81 more)
(+43 files in other folders)
